--- a/cluster-setup/k3d-cluster-config.yaml
+++ b/cluster-setup/k3d-cluster-config.yaml
@@ -3,7 +3,7 @@ kind: Simple
 metadata:
   name: rag
 servers: 1
-agents: 1
+agents: 0
 ports:
   - port: 80:80
     nodeFilters:
@@ -13,3 +13,14 @@ registries:
     name: registry.localhost
     host: "0.0.0.0"
     hostPort: "5000"
+options:
+    k3s:
+        extraArgs:
+            - arg: --kubelet-arg=eviction-hard=imagefs.available<1%,nodefs.available<1%
+              nodeFilters:
+                - server:*
+                - agent:*
+            - arg: --kubelet-arg=eviction-minimum-reclaim=imagefs.available=1%,nodefs.available=1%
+              nodeFilters:
+                - server:*
+                - agent:*
