chore: fix image pulling

--- a/rag/charts/backend/templates/certificate.yaml
+++ b/rag/charts/backend/templates/certificate.yaml
@@ -5,7 +5,9 @@ metadata:
   name: rag-certificate
 spec:
   dnsNames:
-    - rag.localhost
+    {{- range .Values.global.config.dns }} 
+    - {{.}} 
+    {{- end }}
   secretName: tls-certificate
   issuerRef:
     name: letsencrypt-cluster-issuer
