--- a/rag/charts/backend/templates/secrets.yaml
+++ b/rag/charts/backend/templates/secrets.yaml
@@ -9,6 +9,9 @@ data:
 apiVersion: v1
 data:
   auth: {{ .Values.global.secrets.basic_auth }}
+  {{- range $key, $value := .Values.global.secrets.auth }}
+  {{ $key }}: {{ $value | b64enc }}
+  {{- end }}
 kind: Secret
 metadata:
   name: basic-auth
