--- a/rag/charts/backend/templates/configmap.yaml
+++ b/rag/charts/backend/templates/configmap.yaml
@@ -56,6 +56,10 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  name: {{ template "configmap.reranker.name" . }}
+data:
+  {{- range $key, $value := .Values.global.config.envs.reranker }}
+
   name: {{ template "configmap.embedder-class-types.name" . }}
 data:
   {{- range $key, $value := .Values.global.config.envs.embedder_class_types }}
