--- a/rag/charts/backend/templates/secrets.yaml
+++ b/rag/charts/backend/templates/secrets.yaml
@@ -44,3 +44,11 @@ data:
   {{- range $key, $value := .Values.global.secrets.usecase }}
   {{ $key }}: {{ $value | b64enc }}
   {{- end }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "secret.openai.name" . }}
+type: Opaque
+data:
+  OPENAI_API_KEY: {{ .Values.global.secrets.openai.api_key | b64enc }}
