--- a/rag/charts/backend/templates/secrets.yaml
+++ b/rag/charts/backend/templates/secrets.yaml
@@ -38,6 +38,14 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
+  name: {{ template "secret.stackit-vllm.name" . }}
+type: Opaque
+data:
+  STACKIT_VLLM_API_KEY: {{ .Values.global.secrets.stackit_vllm.api_key | b64enc }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
   name: {{ template "secret.usecase.name" . }}
 type: Opaque
 data:
