--- a/rag/charts/backend/templates/secrets.yaml
+++ b/rag/charts/backend/templates/secrets.yaml
@@ -56,6 +56,16 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
+  name: {{ template "secret.stackit-embedder.name" . }}
+type: Opaque
+data:
+  {{- range $key, $value := .Values.global.secrets.stackit_embedder }}
+  {{ $key }}: {{ $value | b64enc }}
+  {{- end }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
   name: {{ template "secret.openai.name" . }}
 type: Opaque
 data:
